--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>로그인</title>
 </head>
 <body>
 <div class="container text-center">
@@ -11,7 +11,8 @@
             <div class="panel">
                 <p>아이디와 비밀번호를 입력해주세요</p>
             </div>
-            <form th:action="@{/login}" class="form-signin" method="post">
+            <form action="/login" class="form-signin" method="post">
+                <input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
                 <div class="form-group">
                     <input type="text" class="form-control" name="username" placeholder="아이디" required="required" autofocus="autofocus" />
                 </div>
